--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="colorPrimary">#0D2B63</color>
+    <color name="colorPrimaryDark">#0D2B63</color>
+    <color name="colorPrimaryDarkTransparent">#0D6750A4</color>
 </resources>
