--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="darkGrey">#AFAEAE</color>
 
     <color name="colorPrimary">#0D2B63</color>
     <color name="colorPrimaryDark">#0D2B63</color>
